# ComposiChem

./: .gitignore  CMakeLists.txt  README.md
.github/: .licenserc.yaml
.github/workflows/: merge.yaml  pull_request.yaml
cmake/: get_nwx_cmake.cmake
src/python/composichem/: __init__.py
tests/python/integration_tests/: test_composichem.py  test_with_nwx.py
tests/python/integration_tests/composichem/: __init__.py  test_with_nwx.py
tests/python/unit_tests/: test_composichem.py
tests/python/unit_tests/composichem/: test_hello_world.py
